--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </div>
   </div>
   <h1 class="loadingdata">Loading Data...</h1>
+  <h3 class="loadingdata2">This may take a few minutes...</h3>
   <img src="IMG_5519.gif" alt="loading" class="loading">
   <script src="script.js"></script>
 </body>
