--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <h1 class="loadingdata">Loading Data...</h1>
   <h3 class="loadingdata2">This may take a few minutes...</h3>
   <img src="IMG_5519.gif" alt="loading" class="loading">
+  <script src="https://cdn.jsdelivr.net/npm/@loadingio/loading-bar@0.1.1/dist/loading-bar.min.js"></script>
   <script src="script.js"></script>
 </body>
 
