--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     </div>
   </div>
   <h1 class="loadingdata">Loading Data...</h1>
+  <div class="ldBar"
+  style="width:100%;height:60px",
+  data-stroke="data:ldbar/res,gradient(0,1,#9df,#9fd,#df9,#fd9)",
+  data-path="M10 20Q20 15 30 20Q40 25 50 20Q60 15 70 20Q80 25 90 20"
+></div>
   <h3 class="loadingdata2">This may take a few minutes...</h3>
   <img src="IMG_5519.gif" alt="loading" class="loading">
   <script src="https://cdn.jsdelivr.net/npm/@loadingio/loading-bar@0.1.1/dist/loading-bar.min.js"></script>
